Bug 1136757 - Add direct Response overload for FetchEvent.respondWith(). r=jdm,nsm,ehsan

ON CLOSED TREE
Fix bug number