dom/workers/ServiceWorkerEvents.h
@@ -11,6 +11,7 @@
 #include "mozilla/dom/FetchEventBinding.h"
 #include "mozilla/dom/InstallEventBinding.h"
 #include "mozilla/dom/Promise.h"
+#include "mozilla/dom/Response.h"
 #include "nsProxyRelease.h"
 
 class nsIInterceptedChannel;
@@ -82,6 +83,9 @@ public:
 
   void
   RespondWith(Promise& aPromise, ErrorResult& aRv);
+
+  void
+  RespondWith(Response& aResponse, ErrorResult& aRv);
 
   already_AddRefed<Promise>
   ForwardTo(const nsAString& aUrl);
